// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`banner 1`] = `
"// minimal.d.ts
/* My Banner */
//#region __tests__/fixtures/minimal.d.ts
declare function foo(): void;
//#endregion
export { foo };
/* My Footer minimal.d.ts */"
`;

exports[`basic 1`] = `
"// basic.d.ts
//#region __tests__/fixtures/basic.d.ts
declare const foo: number;
type SomeType<T> = T;
type FooType = string;
interface Interface {}
declare function fn(argument0: SomeType<FooType>, opt: Interface): void;
declare enum Enum {
  A = 0,
  B = 1,
  C = 2,
}
declare class Cls {
  foo: string;
  fn(e: Enum): void;
}
//#endregion
export { Cls, Enum, fn, foo };
// basic.js
//#region __tests__/fixtures/basic.ts
const foo = 42;
function fn(argument0, opt) {}
let Enum = /* @__PURE__ */ function(Enum) {
	Enum[Enum["A"] = 0] = "A";
	Enum[Enum["B"] = 1] = "B";
	Enum[Enum["C"] = 2] = "C";
	return Enum;
}({});
var Cls = class {
	foo;
	fn(e) {}
};

//#endregion
export { Cls, Enum, fn, foo };"
`;

exports[`cjs exports 1`] = `
"// cjs-exports.js

//#region __tests__/fixtures/cjs-exports.ts
var cjs_exports_default = 42;

//#endregion
module.exports = cjs_exports_default;"
`;

exports[`cjs exports 2`] = `
"// cjs-exports.d.ts
//#region __tests__/fixtures/cjs-exports.d.ts
declare const _default: 42;
export = _default;"
`;

exports[`codeSplitting 1`] = `
"// entry.d.ts
import { t as shared1 } from "./shared1-chunk-DkzKviwR.js";

//#region __tests__/fixtures/manual-chunk/shared2.d.ts
declare const shared2 = "shared2";
//#endregion
export { shared1, shared2 };
// shared1-chunk-DkzKviwR.d.ts
//#region __tests__/fixtures/manual-chunk/shared1.d.ts
declare const shared1 = "shared1";
//#endregion
export { shared1 as t };"
`;

exports[`css.ts files 1`] = `
"// index.d.ts
export * from "./file.css";"
`;

exports[`cyclic import 1`] = `
"// a-B8uCZscZ.d.ts
//#region b.d.ts
declare class SomeClass<T extends SomeInterface<number>> {
  value: T;
  constructor(value: T);
  doSomething<T extends SomeInterface<number>>(value: T): T;
}
type SomeBoolean = boolean;
//#endregion
//#region a.d.ts
interface SomeInterface<T> {
  value: T;
}
type T = SomeBoolean;
//#endregion
export { SomeClass as i, T as n, SomeBoolean as r, SomeInterface as t };
// a.d.ts
import { n as T, t as SomeInterface } from "./a-B8uCZscZ.js";
export { SomeInterface, T };
// b.d.ts
import { i as SomeClass, r as SomeBoolean } from "./a-B8uCZscZ.js";
export { SomeBoolean, SomeClass };"
`;

exports[`declare module 1`] = `
"// declare-module.d.ts
import "./chunk-DtKFMgIm.js";

//#region __tests__/fixtures/declare-module.d.ts
declare module "virtual" {
  const _default: string;
  export default _default;
}"
`;

exports[`deterministic namespace import index 1`] = `
"// a.d.ts
import * as stub_lib from "stub_lib";

//#region a.d.ts
type MyTypeA = stub_lib.LibType;
//#endregion
export { MyTypeA };
// b.d.ts
import * as stub_lib from "stub_lib";

//#region b.d.ts
type MyTypeB = stub_lib.LibType;
//#endregion
export { MyTypeB };
// c.d.ts
import * as stub_lib from "stub_lib";

//#region c.d.ts
type MyTypeC = stub_lib.LibType;
//#endregion
export { MyTypeC };"
`;

exports[`deterministic namespace import index 2`] = `
"// a.d.ts
import * as stub_lib from "stub_lib";

//#region a.d.ts
type MyTypeA = stub_lib.LibType;
//#endregion
export { MyTypeA };
// b.d.ts
import * as stub_lib from "stub_lib";

//#region b.d.ts
type MyTypeB = stub_lib.LibType;
//#endregion
export { MyTypeB };
// c.d.ts
import * as stub_lib from "stub_lib";

//#region c.d.ts
type MyTypeC = stub_lib.LibType;
//#endregion
export { MyTypeC };"
`;

exports[`deterministic namespace import index 3`] = `
"// a.d.ts
import * as stub_lib from "stub_lib";

//#region a.d.ts
type MyTypeA = stub_lib.LibType;
//#endregion
export { MyTypeA };
// b.d.ts
import * as stub_lib from "stub_lib";

//#region b.d.ts
type MyTypeB = stub_lib.LibType;
//#endregion
export { MyTypeB };
// c.d.ts
import * as stub_lib from "stub_lib";

//#region c.d.ts
type MyTypeC = stub_lib.LibType;
//#endregion
export { MyTypeC };"
`;

exports[`dts input > custom chunk name 1`] = `
"// chunks/pdHKr6NI-types.d.ts
//#region __tests__/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
export { User as t };
// input1.d.ts
import { t as User } from "./chunks/pdHKr6NI-types.js";

//#region __tests__/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.ts
import { t as User } from "./chunks/pdHKr6NI-types.js";

//#region __tests__/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };"
`;

exports[`dts input > default chunk name 1`] = `
"// input1.d.mts
import { t as User } from "./types-MKNXnZzT.js";

//#region __tests__/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.mts
import { t as User } from "./types-MKNXnZzT.js";

//#region __tests__/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };
// types-MKNXnZzT.d.ts
//#region __tests__/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
export { User as t };"
`;

exports[`dts input > input array 1`] = `
"// dts-input.d.ts
//#region __tests__/fixtures/dts-input.d.ts
declare class Foo {}
//#endregion
export { Foo };"
`;

exports[`dts input > input object 1`] = `
"// index.d.ts
//#region __tests__/fixtures/dts-input.d.ts
declare class Foo {}
//#endregion
export { Foo };"
`;

exports[`entryFileNames > custom chunk name 1`] = `
"// chunks/pdHKr6NI-types.d.ts
//#region __tests__/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
export { User as t };
// input1.d.ts
import { t as User } from "./chunks/pdHKr6NI-types.js";

//#region __tests__/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.ts
import { t as User } from "./chunks/pdHKr6NI-types.js";

//#region __tests__/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };"
`;

exports[`entryFileNames > default chunk name 1`] = `
"// input1.d.mts
import { t as Input2 } from "./input2-UAri14bi.js";

//#region __tests__/fixtures/alias/input1.d.ts
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
//#endregion
export { Input1, input1 };
// input2-UAri14bi.d.ts
//#region __tests__/fixtures/alias/shared.d.ts
interface Shared {
  shared: string;
}
declare const shared: Shared;
//#endregion
//#region __tests__/fixtures/alias/input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
//#endregion
export { input2 as n, Input2 as t };
// input2.d.mts
import { n as input2, t as Input2 } from "./input2-UAri14bi.js";
export { Input2, input2 };"
`;

exports[`infer false branch 1`] = `
"// index.d.ts
//#region __tests__/fixtures/infer-false-branch/mod.d.ts
type U = 'mod';
//#endregion
//#region __tests__/fixtures/infer-false-branch/index.d.ts
type U$1 = 'local';
type Test<T> = T extends Array<infer U> ? (T extends Array<infer U2> ? U2 : U) : U$1;
//#endregion
export { Test, type U };"
`;

exports[`infer type parameter 1`] = `
"// infer-type-param.d.ts
//#region __tests__/fixtures/infer-type-param.d.ts
type Mapped<T> = T extends Record<string, infer U> ? U : never;
type Fn1<U = unknown> = () => Mapped<U>;
type Fn2<V = unknown> = () => Mapped<V>;
//#endregion
export { Fn1, Fn2 };"
`;

exports[`input alias 1`] = `
"// input2-BRYOrfUi.d.ts
//#region shared.d.ts
interface Shared {
  shared: string;
}
declare const shared: Shared;
//#endregion
//#region input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
//#endregion
export { input2 as n, Input2 as t };
// input2-Cn0-MVuN.js
//#region shared.ts
const shared = { shared: "shared" };

//#endregion
//#region input2.ts
const input2 = {
	...shared,
	input2: "input2"
};

//#endregion
export { input2 as t };
// output1.d.ts
import { t as Input2 } from "./input2-BRYOrfUi.js";

//#region input1.d.ts
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
//#endregion
export { Input1, input1 };
// output1.js
import { t as input2 } from "./input2-Cn0-MVuN.js";

//#region input1.ts
const input1 = {
	...input2,
	input1: "input1"
};

//#endregion
export { input1 };
// output2/index.d.ts
import { n as input2, t as Input2 } from "../input2-BRYOrfUi.js";
export { Input2, input2 };
// output2/index.js
import { t as input2 } from "../input2-Cn0-MVuN.js";

export { input2 };"
`;

exports[`manualChunks 1`] = `
"// entry.d.ts
import { t as shared1 } from "./shared1-chunk-DkzKviwR.js";

//#region __tests__/fixtures/manual-chunk/shared2.d.ts
declare const shared2 = "shared2";
//#endregion
export { shared1, shared2 };
// shared1-chunk-DkzKviwR.d.ts
//#region __tests__/fixtures/manual-chunk/shared1.d.ts
declare const shared1 = "shared1";
//#endregion
export { shared1 as t };"
`;

exports[`paths 1`] = `
"// index.d.ts
//#region __tests__/fixtures/paths/mod.d.ts
declare const foo = 42;
//#endregion
export { foo };"
`;

exports[`re-export from lib > both 1`] = `
"// a.d.ts
export * from "stub-lib";

//#region \\0rolldown/runtime.js

import * as import_stub_lib from "stub-lib";
//#endregion
export { import_stub_lib as t };
// b.d.ts
import { t as a_d_exports } from "./a.js";
type LibType = a_d_exports.LibType;
export { type LibType };"
`;

exports[`re-export from lib > onlyA 1`] = `
"// a.d.ts
export * from "stub-lib";"
`;

exports[`re-export from lib > onlyB 1`] = `
"// b.d.ts
import * as import_stub_lib from "stub-lib";
type LibType = import_stub_lib.LibType;
export { type LibType };"
`;

exports[`real css imports are externalized 1`] = `
"// index.d.ts
//#region __tests__/fixtures/css-real/index.d.ts
declare const foo: number;
//#endregion
export { foo };"
`;

exports[`resolve dts 1`] = `
"// index.d.ts
//#region __tests__/fixtures/resolve-dts/mod.d.ts
type Foo = string;
//#endregion
export { Foo };
// index.js
"
`;

exports[`side effects 1`] = `
"// index.d.ts
import "./mod.js";

//#region __tests__/fixtures/side-effects/index.d.ts
// mod.d.ts
//#region __tests__/fixtures/side-effects/mod.d.ts
declare global {
  let sideEffectExecuted: boolean;
}"
`;

exports[`sub namespace 1`] = `
"// sub-namespace.d.ts
//#region __tests__/fixtures/sub-namespace.d.ts
declare namespace Foo.Bar {}
//#endregion
export { Foo };"
`;

exports[`tree-shaking 1`] = `
"// index.d.ts
//#region __tests__/fixtures/tree-shaking/mod.d.ts

type A = string;
//#endregion
export { type A };
// index.js
"
`;

exports[`tsgo with custom path 1`] = `
"// basic.d.ts
//#region __tests__/fixtures/basic.d.ts
declare const foo: number;
type SomeType<T> = T;
type FooType = string;
interface Interface {}
declare function fn(argument0: SomeType<FooType>, opt: Interface): void;
declare enum Enum {
  A = 0,
  B = 1,
  C = 2,
}
declare class Cls {
  foo: string;
  fn(e: Enum): void;
}
//#endregion
export { Cls, Enum, fn, foo };
// basic.js
//#region __tests__/fixtures/basic.ts
const foo = 42;
function fn(argument0, opt) {}
let Enum = /* @__PURE__ */ function(Enum) {
	Enum[Enum["A"] = 0] = "A";
	Enum[Enum["B"] = 1] = "B";
	Enum[Enum["C"] = 2] = "C";
	return Enum;
}({});
var Cls = class {
	foo;
	fn(e) {}
};

//#endregion
export { Cls, Enum, fn, foo };"
`;

exports[`tsx 1`] = `
"// tsx.d.ts
import { JSX } from "solid-js";

//#region __tests__/fixtures/tsx.d.ts
declare function createComponent(): JSX.HTMLAttributes<HTMLElement>;
//#endregion
export { createComponent };
// tsx.js
import { jsx } from "react/jsx-runtime";

//#region __tests__/fixtures/tsx.tsx
function createComponent() {
	return /* @__PURE__ */ jsx("div", {});
}

//#endregion
export { createComponent };"
`;

exports[`type-only export 1`] = `
"// index.d.ts
//#endregion
//#region __tests__/fixtures/type-only-export/all.d.ts
declare const all = 42;
//#endregion
//#region __tests__/fixtures/type-only-export/mod.d.ts
declare class A {}
declare class B {}
declare const ns = 42;
//#endregion
export { A as RuntimeA, type A as TypeA, type A as TypeC, type B as TypeB, all, type namespace_d_exports as ns };"
`;
